; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ksz884x.c_hw_restore_intr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/micrel/extr_ksz884x.c_hw_restore_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ksz_hw = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ksz_hw*, i64)* @hw_restore_intr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hw_restore_intr(%struct.ksz_hw* %0, i64 %1) #0 {
  %3 = alloca %struct.ksz_hw*, align 8
  %4 = alloca i64, align 8
  store %struct.ksz_hw* %0, %struct.ksz_hw** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load %struct.ksz_hw*, %struct.ksz_hw** %3, align 8
  %9 = call i32 @hw_ena_intr(%struct.ksz_hw* %8)
  br label %10

10:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @hw_ena_intr(%struct.ksz_hw*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
